log
CXX src/love/chai_gfx.cpp
src/love/chai_gfx.cpp: In constructor ‘love::chai_gfx::chai_gfx()’:
src/love/chai_gfx.cpp:10:16: error: ‘opengl’ has not been declared
   10 |     instance = opengl::createInstance();
      |                ^~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:31: src/love/chai_gfx.o] Error 1
